installed typeorm and mysql2
