# build/swagger.json
@@ -30,6 +30,51 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"UsersResponseModel": {
+				"properties": {
+					"firstname": {
+						"type": "string"
+					},
+					"lastname": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"firstname",
+					"lastname",
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Boolean": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserResponseModel": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -58,7 +103,7 @@
 		"contact": {}
 	},
 	"paths": {
-		"/users": {
+		"/user": {
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
@@ -79,7 +124,7 @@
 					}
 				},
 				"tags": [
-					"User"
+					"Post-User"
 				],
 				"security": [],
 				"parameters": [],
@@ -89,6 +134,69 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/params"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/secure/getAllUsers": {
+			"get": {
+				"operationId": "UserInfo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/UsersResponseModel"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Get-User"
+				],
+				"security": [
+					{
+						"jwt": [
+							"user"
+						]
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/user/login": {
+			"post": {
+				"operationId": "UserLogin",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Boolean"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserResponseModel"
 							}
 						}
 					}
